(bug-fix) custom editors.

--- a/blankpage-creation/upload.html
+++ b/blankpage-creation/upload.html
@@ -1,5 +1,4 @@
-<script>alert('hoooooos')   </script>
-<form method="post" hx-post="http://localhost:8080/{{.StreamId}}/add-creation" hx-swap="none" hx-push-url="false" hx-encoding="multipart/form-data" hx-trigger="submit" data-script="init send checkFormRules(changed:me as Values)">
+<form method="post" hx-post="http://localhost:8080/{{.StreamID}}/add-creation" hx-swap="none" hx-push-url="false" hx-encoding="multipart/form-data" hx-trigger="submit" data-script="init send checkFormRules(changed:me as Values)">
     <div class="layout-title">+ Add a Creation</div>
     <div class="tabs" data-script="install TabContainer">
         <div role="tablist">
