--- a/blankpage-exhibit/stylesheet.html
+++ b/blankpage-exhibit/stylesheet.html
@@ -303,6 +303,10 @@ h1{
 	animation-duration:150ms;
 	animation-timing-function: ease;
 }
+.framed {
+	width:95%!important;
+	max-width:1600px;
+}
 #modal-window {
     width: 900px!important;
     max-width: 99vw;
