--- a/blankpage-outbox/exhibits.html
+++ b/blankpage-outbox/exhibits.html
@@ -4,7 +4,7 @@
 {{- $description := .Data "description-exhibits" -}}
 
 <!-- Page content -->
-<div class="framed page padding-none" script="on load add [@aria-selected=true] to #exhibits">
+<div class="framed page padding-none margin-none" script="on load add [@aria-selected=true] to #exhibits">
 
 	{{- template "header" . -}}
 
