--- a/blankpage-outbox/stylesheet.html
+++ b/blankpage-outbox/stylesheet.html
@@ -138,6 +138,9 @@ body {
 	background-color: var(--menu-selected-background);
 	color: var(--menu-selected-text);
 }
-
+.framed {
+	width:95%!important;
+	max-width:1600px;
+}
 
 {{.Data "stylesheet" | css }}
