(incremental) still duplicating...

--- a/blankpage-creation/upload.html
+++ b/blankpage-creation/upload.html
@@ -1,5 +1,5 @@
 
-<form method="post" hx-post="/{{.StreamID}}/create" hx-swap="none" hx-push-url="false" hx-encoding="multipart/form-data" hx-trigger="submit" data-script="init send checkFormRules(changed:me as Values)">
+<form method="post" hx-post="/{{.StreamID}}/add-creation" hx-swap="none" hx-push-url="false" hx-encoding="multipart/form-data" hx-trigger="submit" data-script="init send checkFormRules(changed:me as Values)">
     <div class="layout-title">Edit Creation</div>
     <div class="tabs" data-script="install TabContainer">
         <div role="tablist">
