--- a/blankpage-exhibit/stylesheet.html
+++ b/blankpage-exhibit/stylesheet.html
@@ -132,7 +132,7 @@ h1{
   padding: 0;
   display:block;
   position:relative;
-  float:right;
+  float:left;
 }
 .container img {
   object-fit: cover;
