--- a/blankpage-search/view-results.html
+++ b/blankpage-search/view-results.html
@@ -1,7 +1,13 @@
 {{- $queryString := .QueryParam "q" -}}
 {{- $token := .Token -}}
 
-{{- $results := .Search.Slice -}}
+{{- if eq "" $queryString -}}
+
+	{{- template "view-tags" . -}}
+
+{{- else -}}
+
+	{{- $results := .Search.Slice -}}
 
     <div class="text-md">
         <button hx-get="/{{.Token}}/intent?intent=follow&object={{.Permalink}}">Follow for Updates</button>
@@ -11,16 +17,9 @@
     <div class="cols-4">
         {{- range $result := $results -}}
             <div class="card" style="overflow-x:hidden;">
-<!--                <a href="/{{.Token}}" ><img src="{{ $result.iconUrl }}" alt="">-->
-<!--                    <span class="title">{{ $result.title }}</span>-->
-<!--                    <span class="text">-->
-<!--                        Favorites: {{ $result.favorites }}<br/>-->
-<!--                        Date Created: {{ $result.dateCreated }}<br/>-->
-<!--                        Tags: {{ $result.tags }}<br/>-->
-<!--                        Category: {{- $result.category -}}<br/>-->
-<!--                    </span>-->
-<!--&lt;!&ndash;                </a>&ndash;&gt;-->
-                {{ $result.Data }}
+                <pre>{{- $result | jsonIndent -}}</pre>
             </div>
         {{- end -}}
     </div>
+
+{{- end -}}
