--- a/blankpage-outbox/wizard-1.html
+++ b/blankpage-outbox/wizard-1.html
@@ -3,7 +3,7 @@
 	<div class="max-width-640 margin-horizontal-auto padding">
 
 		<div class="bold text-gray">Getting Started: Step 1 of 3</div>
-		<h1 class="margin-top-none">Welcome to Bandwagon!</h1>
+		<h1 class="margin-top-none">Welcome to blankpage!</h1>
 
 		<div class="margin-bottom-xl bold italics">Please fill out a few quick questions to set up your profile..</div>
 
