--- a/blankpage-song/view.html
+++ b/blankpage-song/view.html
@@ -1,18 +1,18 @@
-{{- $exhibit := .Parent "view" -}}
+{{- $album := .Parent "view" -}}
 {{- $links := .Data "links" -}}
 {{- $streamURL := .Data "streamURL" -}}
-{{- $summary := .Data "summary" -}}
+{{- $lyrics := .Data "lyrics" -}}
 {{- $attachmentID := .Data "attachmentId" -}}
 {{- $duration := .Data "length"}}
 {{- $iconURL := .IconURL -}}
-{{- $imageURL := .Data "imageUrl" -}}
 
 {{- if eq "" $iconURL -}}
-	{{- $iconURL =  $exhibit.IconURL -}}
+	{{- $iconURL =  $album.IconURL -}}
 {{- end -}}
 
-<style>{{- template "stylesheet" . -}}</style>
-<div id="work-{{.StreamID}}" class="page padding-none margin-none">
+<div id="track-{{.StreamID}}" class="page padding-none">
+
+	<link rel="stylesheet" href="/{{.ParentID}}/stylesheet">
 
 	<!-- oEmbed: https://oembed.com -->
 	<link rel="alternate" type="application/json+oembed" href="{{.OEmbedJSON}}">
@@ -20,7 +20,7 @@
 
 	<!-- Open Graph: https://ogp.me/ -->
 	<!-- https://developers.facebook.com/docs/opengraph/music/ -->
-	<meta property="og.type" content="music.creation">
+	<meta property="og.type" content="music.song">
 	<meta property="og:title" content="{{.Label}}">
 	<meta property="og:url" content="{{.Permalink}}">
 	<meta property="og:image" content="{{$iconURL}}">
@@ -28,57 +28,81 @@
 	<meta property="og:description" content="{{.Summary}}">
 	<meta property="og:audio" content="{{.Host}}/{{.StreamID}}/attachments/{{$attachmentID}}">
 	<meta property="og:music:duration" content="{{$duration}}">
-	<meta property="og:music:exhibit" content="{{$exhibit.URL}}">
-	<meta property="og:music:exhibit:work" content="{{.Rank}}">
+	<meta property="og:music:album" content="{{$album.URL}}">
+	<meta property="og:music:album:track" content="{{.Rank}}">
 	<meta property="og:music:musician" content="{{.AttributedTo.ProfileURL}}">
 
 	<div class="pos-relative padding">
 
 		<div class="md:flex-row">
+
+			<div class="md:width-256 flex-shrink-0">
+				<img id="track-icon" src="{{$iconURL}}" class="width-100% rounded square" aria-hidden="true" style="view-transition-name:icon-{{$album.StreamID}}; object-fit:cover;">
+			</div>
+
 			<div class="md:width-32"></div>
 			<div class="flex-grow-1">
 				<h1 class="margin-vertical-none">
-					<span id="work-name">
-						<span class="hide-visual">Piece Name:</span>
+					<span id="track-name">
+						<span class="hide-visual">Track Name:</span>
 						{{.Label}}
 					</span>
-					{{- if eq true (.Data "mature") -}}
-						<span class="text-light-gray text-xl margin-left" title="Explicit Lyrics" aria-label="Explicit Lyrics">{{icon "mature-fill"}}</span>
+					{{- if eq true (.Data "explicit") -}}
+						<span class="text-light-gray text-xl margin-left" title="Explicit Lyrics" aria-label="Explicit Lyrics">{{icon "explicit-fill"}}</span>
 					{{- end -}}
 				</h1>
 				<div class="text-lg margin-top-none">
-					<a id="work-attributedTo" href="/@{{$exhibit.AttributedTo.UserID.Hex}}" hx-boost="true" hx-swap="transition:true" class="turboclick">
+					<a id="track-attributedTo" href="/@{{$album.AttributedTo.UserID.Hex}}" hx-boost="true" hx-swap="transition:true" class="turboclick">
 						<span class="hide-visual">Artist:</span>
-						{{$exhibit.AttributedTo.Name}}
-					</a> 
+						{{$album.AttributedTo.Name}}
+					</a>
 					<span aria-hidden="true">&middot;</span>
-					<a id="work-exhibit" href="/{{$exhibit.StreamID}}" hx-boost="true" hx-swap="transition:true" class="turboclick">
-						<span class="hide-visual">Exhibit:</span>
-						{{ $exhibit.Label }}
+					<a id="track-album" href="/{{$album.StreamID}}" hx-boost="true" hx-swap="transition:true" class="turboclick">
+						<span class="hide-visual">Album:</span>
+						{{ $album.Label }}
 					</a>
 				</div>
 
 				<div class="margin-bottom text-gray">
-					{{ if ne nil ($exhibit.Data "year") -}}
-						<span id="work-year">
+					{{ if ne nil ($album.Data "year") -}}
+						<span id="track-year">
 							<span class="hide-visual">Release Date:</span>
-							{{$exhibit.Data "year"}}
+							{{$album.Data "year"}}
 						</span>
 						{{ if ne nil (.Data "length") -}}
 							<span aria-hidden="true">&middot;</span>
-						{{ end }} 
+						{{ end }}
 					{{- end -}}
-					<span id="work-length">
+					<span id="track-length">
 						<span class="hide-visual">Play Time:</span>
 						{{.Data "length"}}
 					</span>
 				</div>
 
+				<div class="margin-vertical"></div>
+				<div class="margin-vertical-lg">
 
-				<div class="md:flex-row">
-					<a href="{{$iconURL}}" class="piece" rel=”noreferrer target="_SEJ">
-						<img class="padding piece" id="piece" src="{{$attachmentID}}" aria-hidden="true">
-					</a>
+					<div id="media-controls" class="margin-vertical-lg">
+						<a href="/{{.StreamID}}/prev" hx-boost="true" class="button" aria-label="Previous Track">{{icon "skip-backward-fill"}} Prev</a>
+						{{ if ne nil $attachmentID }}
+							<button hx-on:click="PlayFirst()" class="primary playing-hide" aria-label="Play Track">{{icon "play-fill"}} Play</button>
+							<button hx-on:click="Pause()" class="primary playing-show" aria-label="Pause Track">{{icon "pause-fill"}} Pause</button>
+							<script src="/.templates/bandwagon-album/javascript" preload></script>
+							<script type="application/javascript">
+								var playlist = [
+									{"url":"/{{$.StreamID}}/attachments/{{$attachmentID}}", "title":"{{.Label}}"}
+								]
+							</script>
+							<audio>
+								<source id="source-ogg" type="audio/ogg">
+								<source id="source-mp3" type="audio/mp3">
+							</audio>
+						{{ else }}
+							<button disabled aria-label="Play Track">{{icon "play-fill"}} Play</button>
+						{{ end }}
+						<a href="/{{.StreamID}}/next" hx-boost="true" class="button" aria-label="Next Track">Next {{icon "skip-forward-fill"}}</a>
+					</div>
+
 					<div class="text-sm">
 						<button hx-get="/{{.StreamID}}/intent?intent=create&content={{.Label | queryEscape}} {{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "share"}}</span> Share</button>
 						<button hx-get="/{{.StreamID}}/intent?intent=like&object={{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "thumbs-up"}}</span> Like</button>
@@ -93,21 +117,20 @@
 
 			<div class="flex-grow-1">
 
-				{{- if ne nil $summary -}}
-					<div id="work-description" class="margin-bottom-xl padding-right-xl">{{$summary | text}}</div>
+				{{- if ne nil $lyrics -}}
+					<div id="track-description" class="margin-bottom-xl padding-right-xl">{{$lyrics | text}}</div>
 				{{- end -}}
-		
+
 			</div>
 
-			<div class="md:width-256 flex-shrink-0 flex-grow-1"></div>
-			<div id="work-links" class=" flex-shrink-0">
-				<div class="text-sm">Category: {{ .Data "category" }}</div>
+			<div class="md:width-32 flex-shrink-0 flex-grow-0"></div>
+			<div id="track-links" class="md:width-256 flex-shrink-0">
 
 				{{- if .Tags.NotEmpty -}}
-					<div id="creation-tags">
+					<div id="song-tags" class="text-sm margin-bottom">
 						{{- range $index, $tag := .Tags -}}
 							{{- if eq "Hashtag" $tag.Type}}
-							<a href="/works?q=%23{{$tag.Name}}" hx-boost="true" class="tag margin-bottom-sm">#{{$tag.Name}}</a>
+							<a href="/tracks?q=%23{{$tag.Name}}" hx-boost="true" class="tag margin-bottom-sm">#{{$tag.Name}}</a>
 							{{- end -}}
 						{{- end -}}
 					</div>
@@ -117,7 +140,7 @@
 
 					<h3>Stream Online</h3>
 					{{- range $key, $value := $links -}}
-						
+
 						{{- if ne "" $value -}}
 							{{- $icon := "music-note-beamed" -}}
 							{{- $label := $value -}}
@@ -173,19 +196,32 @@
 				{{- end -}}
 
 				{{- if ne nil $streamURL -}}
-					<a id="work-video" href="{{$streamURL}}" target="_blank" class="block ellipsis">
+					<a id="track-video" href="{{$streamURL}}" target="_blank" class="block ellipsis">
 						<i class="bi bi-camera-video-fill"></i> Music Video
 					</a><br>
 				{{- end -}}
 
 				<br>
-				{{- if ne nil (.Data "hubber") -}}
-					<span id="work-hubber">Artist: {{.Data "hubber"}}</span><br>
+				{{- if ne nil (.Data "artist") -}}
+					<span id="track-artist">Artist: {{.Data "artist"}}</span><br>
 				{{- end -}}
-			
-				{{- $license := .DataString "license"}}l
+
+				{{- if ne nil (.Data "composer") -}}
+					<span id="track-composer">Composer: {{.Data "composer"}}</span><br>
+				{{- end -}}
+
+				{{- if ne nil (.Data "producer") -}}
+					<span id="track-producer">Producer: {{.Data "producer"}}</span><br>
+				{{- end -}}
+
+				<br>
+				{{- if ne nil (.Data "isrc") -}}
+					<span id="track-isrc">ISRC: {{.Data "isrc"}}</span><br>
+				{{- end -}}
+
+				{{- $license := .DataString "license"}}
 				{{- if eq "COPYRIGHT" $license -}}
-					<div id="work-license">
+					<div id="track-license">
 						<h3 class="margin-top">License</h3>
 						<div>
 							&copy; Copyright
@@ -198,13 +234,13 @@
 						</div>
 					</div>
 				{{- else if ne "" $license -}}
-					{{- $licenses := .Dataset "blankpage-exhibit.licenses" -}}
+					{{- $licenses := .Dataset "bandwagon-album.licenses" -}}
 					{{- $licenseInfo := $licenses.Value $license -}}
-					<div id="work-license">
+					<div id="track-license">
 						<h3 class="margin-top">License</h3>
 						<div>
 							<a href="{{$licenseInfo.Href}}" rel="license" class="text-plain" target="_blank">
-								{{icon $licenseInfo.Icon}} 
+								{{icon $licenseInfo.Icon}}
 								{{ if ne nil (.Data "year") }}
 									{{.Data "year"}}
 								{{- end }}
@@ -219,20 +255,20 @@
 
 		{{- if .UserCan "edit" -}}
 			<div class="pos-absolute-top-right text-xs">
-				<button hx-get="/{{.StreamID}}/edit">Edit Piece</button>
+				<button hx-get="/{{.StreamID}}/edit">Edit Song</button>
 			</div>
 
 			<div hx-ext="sse" sse-connect="/{{.StreamID}}/sse">
-				<div 
-					hx-get="/{{.StreamID}}" 
-					hx-trigger="sse:{{.StreamID}}, refreshPage from:window" 
-					hx-target="#main" 
+				<div
+					hx-get="/{{.StreamID}}"
+					hx-trigger="sse:{{.StreamID}}, refreshPage from:window"
+					hx-target="#main"
 					hx-swap="innerHTML"
 					hx-push-url="false">
 				</div>
 			</div>
 		{{- end -}}
-		
+
 	</div>
 
 </div>
