(bug-fix) vanishing titles.

--- a/blankpage-creation/upload.html
+++ b/blankpage-creation/upload.html
@@ -12,9 +12,9 @@
             <div class="layout layout-vertical">
                 <div class="layout-elements">
                     <div class="layout-element layout-vertical-element">
-                        <label for="title.text" aria-hidden="true">Creation Title</label>
+                        <label for="label.text" aria-hidden="true">Creation Title</label>
 
-                        <input name="title" id="title.text" aria-label="Creation Title" tabIndex="0" type="text">
+                        <input name="label" id="label.text" aria-label="Creation Title" tabIndex="0" type="text">
                     </div>
                     <div class="layout-element layout-vertical-element">
                         <label for="data.attachmentId.upload" aria-hidden="true">Artwork File</label>
