--- a/blankpage-creation/upload.html
+++ b/blankpage-creation/upload.html
@@ -13,7 +13,7 @@
                 <div class="layout-elements">
                     <div class="layout-element layout-vertical-element">
                         <label for="label.text" aria-hidden="true">Creation Title</label>
-
+<script>alert('hoooooos')   </script>
                         <input name="label" id="label.text" aria-label="Creation Title" tabIndex="0" type="text">
                     </div>
                     <div class="layout-element layout-vertical-element">
