--- a/blankpage-literature/view.html
+++ b/blankpage-literature/view.html
@@ -1,5 +1,29 @@
-{{- $exhibit := .Parent "view" -}}
+<div class="page h-entry" script="on load take .selected from .nav-item for #nav-{{.NavigationID}}">
 
-<div id="work-{{.StreamID}}" class="page padding-none margin-none">
+	<link rel="stylesheet" href="/.templates/article-base/stylesheet"/>
 
+	<article class="content margin-bottom">
+		{{- .Widgets "LEFT" -}}
+		<div class="content-main">
+			{{- .Widgets "TOP" -}}
+			<div class="e-content">{{- .ContentHTML -}}</div>
+			{{- .Widgets "BOTTOM" -}}
+		</div>
+		{{- .Widgets "RIGHT" -}}
+	</article>
+
+	{{- if .UserCan "edit" -}}
+		<div style="position:absolute; top:4px; right:8px;">
+			<a class="text-xs button" href="/{{.StreamID}}/edit">Edit &rarr;</a>
+		</div>
+	{{- end -}}
+
+	<div 
+		hx-get="/{{.StreamID}}" 
+		hx-trigger="refreshPage from:window"
+		hx-target="#main"
+		hx-swap="innerHTML"
+		hx-push-url="false">
+	</div>
+	
 </div>
