--- a/blankpage-literature/view.html
+++ b/blankpage-literature/view.html
@@ -1,4 +1,5 @@
-<div class="page h-entry" script="on load take .selected from .nav-item for #nav-{{.NavigationID}}">
+<style>{{- template "stylesheet" . -}}</style>
+<div id="work-{{.StreamID}}" class="page padding-none margin-none">
 
 	<link rel="stylesheet" href="/.templates/article-base/stylesheet"/>
 
@@ -16,10 +17,20 @@
 		<div style="position:absolute; top:4px; right:8px;">
 			<a class="text-xs button" href="/{{.StreamID}}/edit">Edit &rarr;</a>
 		</div>
+
+		<div hx-ext="sse" sse-connect="/{{.StreamID}}/sse">
+			<div
+				hx-get="/{{.StreamID}}"
+				hx-trigger="sse:{{.StreamID}}, refreshPage from:window"
+				hx-target="#main"
+				hx-swap="innerHTML"
+				hx-push-url="false">
+			</div>
+		</div>
 	{{- end -}}
 
-	<div 
-		hx-get="/{{.StreamID}}" 
+	<div
+		hx-get="/{{.StreamID}}"
 		hx-trigger="refreshPage from:window"
 		hx-target="#main"
 		hx-swap="innerHTML"
